@@ -1,26 +1,4 @@
 
-psetf evaluiert komplexe forms in der falschen reihenfolge:
-
-JMurmel> (macroexpand-1 '(psetf (car x) (car a) (car y) (car b) (car z) (car c)))
- -> (let (#:gensym #:gensym #:gensym) (setf #:gensym (car a)) (setf #:gensym (car b)) (setf #:gensym (car c)) (setf (car x) #:gensym) (setf (car y) #:gensym) (setf (car z) #:gensym))
- -> t
-
-
-* (macroexpand-1 '(psetf (car x) (car a) (car y) (car b) (car z) (car c)))
-(LET* ((#:X167 X)
-       (#:NEW166 (CAR A))
-       (#:Y169 Y)
-       (#:NEW168 (CAR B))
-       (#:Z171 Z)
-       (#:NEW170 (CAR C)))
-  (SB-KERNEL:%RPLACA #:X167 #:NEW166)
-  (SB-KERNEL:%RPLACA #:Y169 #:NEW168)
-  (SB-KERNEL:%RPLACA #:Z171 #:NEW170)
-  NIL)
-T
-
-
-
 closures im compiler haben ein problem: die closure hält eine referenz auf den gesamten stackframe (das Object... array)
 und damit auf alle variablen und nicht nur auf die variablen über die eigentlich geclosed wird.
 -> dadurch kann der gc variablen die in keiner closure benötigt werden nicht freigeben -> speicherleck oder zumindest unnötiger speicherverbrauch 
